--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 {% block title %}
-Hand Sign Digit Recognition
+Image hiding page
 {% endblock %}
  
 {% block content %}
 <div class="container py-5">
  
     <header class="text-white text-center">
-        <h1 class="display-4">Hand Sign Digit Language Detection</h1>
-        <p class="lead mb-5">A webapp to detect a digit using hand sign language. Just drop an image of Hand Digit Sign
-            and see the magic.</p>
+        <h1 class="display-4">Hide an image following our protocol!</h1>
+        <p class="lead mb-5">A webapp for a safer steganographic and cryptographic medical
+             images transfer! Chose a secret then cover image and see the magic!.</p>
     </header>
  
     <div class="row py-4">
@@ -32,7 +32,7 @@ Hand Sign Digit Recognition
                 <!-- Upload image input for Cover Image-->
                 
                 <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
-                    <label for="upload2" class="font-weight-bold text-muted" id="upload-label2" style="margin-top: 10px;">Select the Cover Image</label>
+                    <label for="upload2" class="font-weight-bold text-muted" id="upload-label2">Select the Cover Image</label>
                     <input class="form-control border-0" id="upload2" name="cover" type="file">
                     <div class="input-group-append">
                         <label class="btn btn-light m-0 rounded-pill px-4" for="upload2"> <i
@@ -61,9 +61,8 @@ Hand Sign Digit Recognition
 <div class="container py-5">
  
     <header class="text-white text-center">
-        <h1 class="display-4">Hand Sign Digit Language Detection</h1>
-        <p class="lead mb-5">A webapp to detect a digit using hand sign language. Just drop an image of Hand Digit Sign
-            and see the magic.</p>
+        <h1 class="display-4">Steganographic Hiding and revealing pipeline</h1>
+        <p class="lead mb-5">A webapp for a safer steganographic and cryptographic medical images transfer!</p>
     </header>
  
     
