--- a/templates/result.html
+++ b/templates/result.html
@@ -1,19 +1,20 @@
 {% extends "layout.html" %}
 {% block title %}
-Prediction - Hand Sign Digit Recognition
+Prediction - Two images in one!
 {% endblock %}
  
 {% block content %}
 <div class="container py-5">
  
     <header class="text-white text-center">
-        <h1 class="display-4">Hiding Processed!</h1>
-        <p class="lead mb-5">You will see the prediction Steganographic image below!.</p>
+        <h1 class="display-4">Two images in one!</h1>
+        <p class="lead mb-5">You will see the prediction of the steganographic image below!.</p>
     </header>
  
     <div class="text-center">
         <img src="{{ url_for('static', filename='images/Coverout.jpg') }}" class="image" />
         <h2 class="mt-3">Here is your hidden image</h2>
+        <a href="{{ url_for('download_image') }}" class="btn btn-primary mt-3">Download Image</a>
     </div>
 </div>
 {% endblock %}
