--- a/templates/result.html
+++ b/templates/result.html
@@ -12,7 +12,7 @@ Prediction - Two images in one!
     </header>
  
     <div class="text-center">
-        <img src="{{ url_for('static', filename='images/Coverout.jpg') }}" class="image" />
+        <img src="{{ url_for('static', filename='images/Coverout.png') }}" class="image" />
         <h2 class="mt-3">Here is your hidden image</h2>
         <a href="{{ url_for('download_image') }}" class="btn btn-primary mt-3">Download Image</a>
     </div>
