--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 <div class="container py-5">
  
     <header class="text-white text-center">
-        <h1 class="display-4">Hiding Processed!</h1>
+        <h1 class="display-4"> Processed!</h1>
         <p class="lead mb-5">You will see the prediction Steganographic image below!.</p>
     </header>
  
